      - Fixed crashing when non-first argument to and() contains package
        relationship or defining functions.
      - New function 'source-to-binary'.
    - 'search':
      - FSE mode: enabled parsing of unknown version fields.
  * lib:
    - config:
      - New option 'cupt::resolver::score::version-factor'.
      - New option 'cupt::resolver::score::negative-version-factor'.
      - New option 'cupt::resolver::max-leaf-count'.
      - Option 'cupt::resolver::max-solution-count': increased default value
        from 8192 to 32000.
      - Option 'cupt::resolver::score::quality-adjustment': changed default
        value from 40 to 0.
      - Option 'cupt::resolver::score::removal-of-autoinstalled': changed
        default value from 1200 to 1500.
      - Option 'cupt::resolver::score::upgrade': changed default value
        from 100 to 20.
    - system/state:
      - [API break] 'getInstalledInfo': returns raw pointer.
    - system/worker:
      - [API break] 'setAutomaticallyInstalledFlag': removed as obsolete.
    - system/resolvers/native:
      - Removed the version normalized score calculation skew.
        (Closes: #754480)
      - Implemented automatic quality adjustment.
      - Fixed not applying downgrade score for reinstalls. This regression
        was introduced in 2.6.0.
      - Significantly reduced not-user score part of upgrades.
  * doc:
    - cmakelists:
      - Added rules building man pages from PODs.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 May 2014 21:26:32 +0300

cupt (2.8.3) unstable; urgency=medium

  * lib:
    - config:
      - New option 'cupt::console::actions-preview::show-empty-versions'.
    - system/resolvers/native:
      - For equal-scored version change variants, propose higher versions
        first. The regression for some typical upgrade situations was
        introduced in 2.8.0, the regression for some typical non-upgrade
        user requests was introduced in 2.6.0, and many non-typical cases