@@ -131,10 +131,10 @@ void ConfigImpl::initializeVariables()
 		// Cupt vars
 		{ "cupt::cache::limit-releases::by-archive::type", "none" },
 		{ "cupt::cache::limit-releases::by-codename::type", "none" },
-		{ "cupt::cache::pin::addendums::downgrade", "-80000" },
-		{ "cupt::cache::pin::addendums::hold", "9000000" },
-		{ "cupt::cache::pin::addendums::not-automatic", "-36000" },
-		{ "cupt::cache::pin::addendums::but-automatic-upgrades", "36200" },
+		{ "cupt::cache::pin::addendums::downgrade", "-35000" },
+		{ "cupt::cache::pin::addendums::hold", "5000000" },
+		{ "cupt::cache::pin::addendums::not-automatic", "-16000" },
+		{ "cupt::cache::pin::addendums::but-automatic-upgrades", "16200" },
 		{ "cupt::cache::release-file-expiration::ignore", "no" },
 		{ "cupt::console::allow-untrusted", "no" },
 		{ "cupt::console::assume-yes", "no" },
@@ -210,6 +210,7 @@ void ConfigImpl::initializeVariables()
 		{ "cupt::resolver::score::failed-synchronization", "-80" },
 		{ "cupt::resolver::score::version-factor", "20" },
 		{ "cupt::resolver::score::negative-version-factor", "50" },
+		{ "cupt::resolver::score::version-factor::priority-downgrade", "300" },
 		{ "cupt::worker::archives-space-limit", "0" },
 		{ "cupt::worker::defer-triggers", "auto" },
 		{ "cupt::worker::download-only", "no" },
