@@ -11,6 +11,8 @@ cupt (2.9.0~) UNRELEASED; urgency=medium
     - config:
       - New option 'cupt::resolver::score::version-factor'.
       - New option 'cupt::resolver::score::negative-version-factor'.
+      - New option
+        'cupt::resolver::score::version-factor::priority-downgrade'.
       - New option 'cupt::resolver::max-leaf-count'.
       - Option 'cupt::resolver::max-solution-count': increased default value
         from 8192 to 32000.
